# dx-sdk-rs-prechecker

./: .gitignore  CHANGELOG.md  README.md  publish.sh
.github/workflows/: actions.yml  release-upload.yml  template-test-current.yml  template-test-released.yml
contracts/benchmarks/large-storage/: Cargo.toml
contracts/benchmarks/send-tx-repeat/: Cargo.toml
contracts/benchmarks/str-repeat/: Cargo.toml
contracts/core/price-aggregator/: Cargo.toml
contracts/core/price-aggregator/meta/: Cargo.toml
contracts/core/wmoax-swap/: Cargo.toml
contracts/core/wmoax-swap/meta/: Cargo.toml
contracts/examples/adder/: Cargo.toml
contracts/examples/bonding-curve-contract/: Cargo.toml
contracts/examples/check-pause/: Cargo.toml
contracts/examples/crowdfunding-dct/: Cargo.toml
contracts/examples/crypto-bubbles/: Cargo.toml
contracts/examples/crypto-kitties/: documentation.md
contracts/examples/crypto-zombies/: Cargo.toml
contracts/examples/dct-transfer-with-fee/: Cargo.toml
contracts/examples/digital-cash/: Cargo.toml  README.md
contracts/examples/empty/: Cargo.toml
contracts/examples/factorial/: Cargo.toml
contracts/examples/fractional-nfts/: Cargo.toml
contracts/examples/lottery-dct/: Cargo.toml
contracts/examples/multisig/: Cargo.toml  README.md
contracts/examples/multisig/interact-rs/: Cargo.toml
contracts/examples/multisig/interact-rs/src/: multisig_interact.rs
contracts/examples/nft-minter/: Cargo.toml
contracts/examples/nft-storage-prepay/: Cargo.toml
contracts/examples/nft-subscription/: Cargo.toml
contracts/examples/ping-pong-moax/: Cargo.toml
contracts/examples/proxy-pause/: Cargo.toml
contracts/examples/rewards-distribution/: Cargo.toml
contracts/examples/seed-nft-minter/: Cargo.toml
contracts/examples/token-release/: Cargo.toml
contracts/examples/token-release/meta/: Cargo.toml
contracts/examples/token-release/wasm/: Cargo.toml
contracts/feature-tests/abi-tester/: Cargo.toml  abi_tester_expected_main.abi.json  abi_tester_expected_view.abi.json
contracts/feature-tests/alloc-features/: Cargo.toml
contracts/feature-tests/basic-features/: Cargo.toml
contracts/feature-tests/big-float-features/: Cargo.toml
contracts/feature-tests/composability/: Cargo.toml
contracts/feature-tests/dct-system-sc-mock/: Cargo.toml
contracts/feature-tests/formatted-message-features/: Cargo.toml
contracts/feature-tests/managed-map-features/: Cargo.toml
contracts/feature-tests/multi-contract-features/: Cargo.toml
contracts/feature-tests/panic-message-features/: Cargo.toml
contracts/feature-tests/payable-features/: Cargo.toml
contracts/feature-tests/rust-snippets-generator-test/: Cargo.toml
contracts/feature-tests/rust-testing-framework-tester/: Cargo.toml
contracts/feature-tests/use-module/: Cargo.toml  (+2 more)
contracts/modules/: Cargo.toml
data/codec/: Cargo.toml
data/codec-derive/: Cargo.toml
framework/base/: Cargo.toml
framework/codec/: Cargo.toml
framework/codec-derive/: Cargo.toml
framework/derive/: Cargo.toml
framework/meta/: Cargo.toml
framework/scenario/: Cargo.toml
framework/snippets/: Cargo.toml
framework/snippets/src/: interactor.rs  interactor_dns.rs  interactor_sc_call.rs  interactor_sc_deploy.rs  interactor_vm_query.rs
framework/wasm-adapter/: Cargo.toml
sdk/core/: Cargo.toml
sdk/scenario-format/: Cargo.toml
tools/mxpy-snippet-generator/: Cargo.toml
vm/: Cargo.toml
(+275 files in other folders)
