[package]
name = "dharitri-sc-wasm-adapter"
version = "0.0.8"
edition = "2021"

authors = [
    "Andrei Marinica <andrei.marinica@dharitri.com>",
    "Dharitri <contact@dharitri.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Dharitri-org/dx-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri WebAssembly VM API wrapper"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = [
    "no-std",
    "wasm",
    "cryptography::cryptocurrencies",
    "development-tools::ffi",
]

[features]
vm-validate-token-identifier = []
vm-dct-local-roles = []
ei-unmanaged-node = []

[dependencies.dharitri-sc]
version = "=0.0.8"
path = "../base"
