[package]
name = "token-release"
version = "0.1.6"
authors = [ "you",]
edition = "2021"
publish = false

[lib]
path = "src/token_release.rs"

[dependencies.dharitri-sc]
version = "0.1.6"
path = "../../../framework/base"

[dev-dependencies.dharitri-sc-scenario]
version = "0.1.6"
path = "../../../framework/scenario"

