[package]
name = "dharitri-price-aggregator-sc-meta"
version = "0.1.6"
edition = "2021"
publish = false

[dependencies.dharitri-price-aggregator-sc]
path = ".."

[dependencies.dharitri-sc]
version = "0.1.6"
path = "../../../../framework/base"

[dependencies.dharitri-sc-meta]
version = "0.1.6"
path = "../../../../framework/meta"
