[package]
name = "dharitri-wmoax-swap-sc-meta"
version = "0.1.6"
authors = [ "Dorin Iancu <dorin.iancu@dharitri.com>",]
edition = "2021"
publish = false

[dev-dependencies]

[dependencies.dharitri-wmoax-swap-sc]
path = ".."

[dependencies.dharitri-sc]
version = "0.1.6"
path = "../../../../framework/base"

[dependencies.dharitri-sc-meta]
version = "0.1.6"
path = "../../../../framework/meta"
