[package]
name = "multisig-interact"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2021"
publish = false

[[bin]]
name = "multisig-interact"
path = "src/multisig_interact.rs"

[dependencies.multisig]
path = ".."

[dependencies.dharitri-sc-modules]
version = "0.0.6"
path = "../../../../contracts/modules"

[dependencies.dharitri-sc-snippets]
version = "0.0.6"
path = "../../../../framework/snippets"
